Inserimento pagina statistiche

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
   
   <div class="spacer">
   </div>
+  <span><a class="text-light" [routerLink]='["/statistiche"]'>Statistiche</a></span>
 </div>
 
 <div class="container" role="main">
