--- a/src/app/modifica-risorsa/modifica-risorsa.component.html
+++ b/src/app/modifica-risorsa/modifica-risorsa.component.html
@@ -9,36 +9,66 @@
                 <div class="form-group ">
                     <label for="nomeId">Nome</label>
                     <input name="nome" type="text" class="form-control" id="nomeId" [(ngModel)]="risorsaModel.nome"
-                        required>
+                        required placeholder="Nome (obbligatorio)" #nome="ngModel"
+                        [ngClass]="{'is-invalid': (nome.touched || nome.dirty) && !nome.valid }">
+                        <span class="invalid-feedback">
+                            <span *ngIf="nome.errors?.required">
+                                Il campo nome è obbligatorio
+                            </span>
+                        </span>
                 </div>
+
 
                 <div class="form-group">
                     <label for="cognomeId">Cognome</label>
-                    <input name="cognome" type="text" class="form-control" id="cognomeId"
-                        [(ngModel)]="risorsaModel.cognome" required>
+                    <input name="cognome" type="text" class="form-control" id="cognomeId" [(ngModel)]="risorsaModel.cognome" 
+                    required placeholder="Cognome (obbligatorio)" #cognome="ngModel"
+                    [ngClass]="{'is-invalid': (cognome.touched || cognome.dirty) && !cognome.valid }">
+                    <span class="invalid-feedback">
+                        <span *ngIf="cognome.errors?.required">
+                            Il campo cognome è obbligatorio
+                        </span>
+                    </span>
                 </div>
 
                 <div class="form-group">
                     <label for="dataNascitaId">Data di nascita</label>
-                    <input name="dataNascita" type="date" class="form-control" id="dataNascitaId"
-                        [(ngModel)]="risorsaModel.dataNascita" required>
+                    <input name="dataNascita" type="date" class="form-control" id="dataNascitaId" [(ngModel)]="risorsaModel.dataNascita" 
+                    required #dataNascita="ngModel"
+                    [ngClass]="{'is-invalid': (dataNascita.touched || dataNascita.dirty) && !dataNascita.valid }">
+                    <span class="invalid-feedback">
+                        <span *ngIf="dataNascita.errors?.required">
+                            Il campo data di nascita è obbligatorio
+                        </span>
+                    </span>
                 </div>
 
                 <div class="form-group">
                     <label for="dataNascitaId">Settore</label>
                     <select #settoreSelect name="settore" class="form-control" id="settoreId"
-                        [(ngModel)]="risorsaModel.settore" required>
-                        <option *ngFor="let settoreItem of settori"
-                            [selected]="settoreItem.codice == risorsaModel.settore.codice" [ngValue]="settoreItem">
+                        [(ngModel)]="risorsaModel.settore" required #settore="ngModel"
+                        [ngClass]="{'is-invalid': (settore.touched || settore.dirty) && !settore.valid }">
+                        <option *ngFor="let settoreItem of settori" [ngValue]="settoreItem">
                             {{settoreItem.descrizione}}
                         </option>
                     </select>
+                    <span class="invalid-feedback">
+                        <span *ngIf="settore.errors?.required">
+                            Il campo settore è obbligatorio
+                        </span>
+                    </span>
                 </div>
 
                 <div class="form-group">
                     <label for="stipendioRALId">Stipendio</label>
                     <input name="stipendioRAL" type="number" class="form-control" id="stipendioRALId"
-                        [(ngModel)]="risorsaModel.stipendioRAL" required>
+                        [(ngModel)]="risorsaModel.stipendioRAL" required #stipendio="ngModel"
+                        [ngClass]="{'is-invalid': (stipendio.touched || stipendio.dirty) && !stipendio.valid }">
+                    <span class="invalid-feedback">
+                        <span *ngIf="settore.errors?.required">
+                            Il campo stipendio è obbligatorio
+                        </span>
+                    </span>
                 </div>
 
                 <div class="form-group">
@@ -66,7 +96,7 @@
                         </option>
                     </select>
                 </div>
-                
+
                 <button [disabled]="!risorsaForm.form.valid" type="submit" class="btn btn-success mb-3">Submit</button>
             </form>
         </div>
