--- a/src/app/pie-chart/pie-chart.component.html
+++ b/src/app/pie-chart/pie-chart.component.html
@@ -4,7 +4,7 @@
   <div class="col-sm-9">
     <div id="chart">
       <apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart" [labels]="chartOptions.labels"
-        [responsive]="chartOptions.responsive"></apx-chart>
+        [responsive]="chartOptions.responsive" [colors]="chartColors"></apx-chart>
     </div>
   </div>
   <div class="col-sm-3">
