--- a/src/app/modifica-risorsa/modifica-risorsa.component.html
+++ b/src/app/modifica-risorsa/modifica-risorsa.component.html
@@ -11,19 +11,20 @@
                     <input name="nome" type="text" class="form-control" id="nomeId" [(ngModel)]="risorsaModel.nome"
                         required placeholder="Nome (obbligatorio)" #nome="ngModel"
                         [ngClass]="{'is-invalid': (nome.touched || nome.dirty) && !nome.valid }">
-                        <span class="invalid-feedback">
-                            <span *ngIf="nome.errors?.required">
-                                Il campo nome è obbligatorio
-                            </span>
+                    <span class="invalid-feedback">
+                        <span *ngIf="nome.errors?.required">
+                            Il campo nome è obbligatorio
                         </span>
+                    </span>
                 </div>
 
 
                 <div class="form-group">
                     <label for="cognomeId">Cognome</label>
-                    <input name="cognome" type="text" class="form-control" id="cognomeId" [(ngModel)]="risorsaModel.cognome" 
-                    required placeholder="Cognome (obbligatorio)" #cognome="ngModel"
-                    [ngClass]="{'is-invalid': (cognome.touched || cognome.dirty) && !cognome.valid }">
+                    <input name="cognome" type="text" class="form-control" id="cognomeId"
+                        [(ngModel)]="risorsaModel.cognome" required placeholder="Cognome (obbligatorio)"
+                        #cognome="ngModel"
+                        [ngClass]="{'is-invalid': (cognome.touched || cognome.dirty) && !cognome.valid }">
                     <span class="invalid-feedback">
                         <span *ngIf="cognome.errors?.required">
                             Il campo cognome è obbligatorio
@@ -33,9 +34,9 @@
 
                 <div class="form-group">
                     <label for="dataNascitaId">Data di nascita</label>
-                    <input name="dataNascita" type="date" class="form-control" id="dataNascitaId" [(ngModel)]="risorsaModel.dataNascita" 
-                    required #dataNascita="ngModel"
-                    [ngClass]="{'is-invalid': (dataNascita.touched || dataNascita.dirty) && !dataNascita.valid }">
+                    <input name="dataNascita" type="date" class="form-control" id="dataNascitaId"
+                        [(ngModel)]="risorsaModel.dataNascita" required #dataNascita="ngModel"
+                        [ngClass]="{'is-invalid': (dataNascita.touched || dataNascita.dirty) && !dataNascita.valid }">
                     <span class="invalid-feedback">
                         <span *ngIf="dataNascita.errors?.required">
                             Il campo data di nascita è obbligatorio
@@ -45,15 +46,16 @@
 
                 <div class="form-group">
                     <label for="dataNascitaId">Settore</label>
-                    <select #settoreSelect name="settore" class="form-control" id="settoreId"
-                        [(ngModel)]="risorsaModel.settore" required #settore="ngModel"
-                        [ngClass]="{'is-invalid': (settore.touched || settore.dirty) && !settore.valid }">
+                    <select [(ngModel)]="risorsaModel.settore" [compareWith]="compareFn" #settoreSelect name="settore"
+                        class="form-control" id="settoreId" required ngModel
+                        [ngClass]="{'is-invalid': (settoreSelect.touched || settoreSelect.dirty) && !settoreSelect.valid }">
+                        <option [ngValue]="null" disabled>--Seleziona Settore--</option>
                         <option *ngFor="let settoreItem of settori" [ngValue]="settoreItem">
                             {{settoreItem.descrizione}}
                         </option>
                     </select>
                     <span class="invalid-feedback">
-                        <span *ngIf="settore.errors?.required">
+                        <span *ngIf="settoreSelect.errors?.required">
                             Il campo settore è obbligatorio
                         </span>
                     </span>
@@ -65,7 +67,7 @@
                         [(ngModel)]="risorsaModel.stipendioRAL" required #stipendio="ngModel"
                         [ngClass]="{'is-invalid': (stipendio.touched || stipendio.dirty) && !stipendio.valid }">
                     <span class="invalid-feedback">
-                        <span *ngIf="settore.errors?.required">
+                        <span *ngIf="stipendio.errors?.required">
                             Il campo stipendio è obbligatorio
                         </span>
                     </span>
@@ -74,23 +76,24 @@
                 <div class="form-group">
                     <label>Residenza</label>
                     <select required name="regione" class="form-control" id="regioneId" #regioneSelect
-                        (ngModelChange)="onRegioneChange($event)" [(ngModel)]="risorsaModel.residenza.regione">
-                        <option [ngValue]="notSelected">--Seleziona Regione--</option>
+                        (ngModelChange)="onRegioneChange($event)" [(ngModel)]="risorsaModel.residenza.regione" [compareWith]="compareFn">
+                        <option [ngValue]="null" disabled>--Seleziona Regione--</option>
                         <option *ngFor="let regioneItem of regioni" [ngValue]="regioneItem">
                             {{regioneItem.descrizione}}
                         </option>
                     </select>
                     <select required name="provincia" class="form-control" id="provinciaId" #provinciaSelect
-                        [disabled]="!province.length || !regione" (ngModelChange)="onProvinciaChange($event)"
+                        [disabled]="!province.length || !regione" (ngModelChange)="onProvinciaChange($event)" [compareWith]="compareFn"
                         [(ngModel)]="risorsaModel.residenza.provincia">
-                        <option [ngValue]="notSelected" *ngIf="province.length">--Seleziona Provincia--</option>
+                        <option [ngValue]="null" *ngIf="province.length" disabled>--Seleziona Provincia--
+                        </option>
                         <option *ngFor="let provinciaItem of province" [ngValue]="provinciaItem">
                             {{provinciaItem.descrizione}}
                         </option>
                     </select>
-                    <select required name="comune" class="form-control" id="comuneId" #comuneSelect
+                    <select required name="comune" class="form-control" id="comuneId" #comuneSelect [compareWith]="compareFn"
                         [disabled]="!comuni.length || !provincia" [(ngModel)]="risorsaModel.residenza.comune">
-                        <option [ngValue]="notSelected" *ngIf="comuni.length">--Seleziona Comune--</option>
+                        <option [ngValue]="null" *ngIf="comuni.length" disabled>--Seleziona Comune--</option>
                         <option *ngFor="let comuneItem of comuni" [ngValue]="comuneItem">
                             {{comuneItem.descrizione}}
                         </option>
