aggiunta calcolo eta

--- a/src/app/dettaglio-risorsa/dettaglio-risorsa.component.html
+++ b/src/app/dettaglio-risorsa/dettaglio-risorsa.component.html
@@ -24,7 +24,7 @@
             Data di nascita:
         </dt>
         <dd class="col-sm-8">
-            {{risorsa.dataNascita}}
+            {{risorsa.dataNascita}} ({{getEta(risorsa)}} anni)
         </dd>
     </dl>
     <dl class="row">
