--- a/src/app/pie-chart/pie-chart.component.html
+++ b/src/app/pie-chart/pie-chart.component.html
@@ -15,6 +15,8 @@
         (click)="onClickButtonStipendiRALTotali()">StipendiRAL Totali</button>
       <button type="button" class="btn btn-sm btn-outline-primary"
         (click)="onClickButtonStipendioRALMedio()">StipendioRAL Medio</button>
+        <button type="button" class="btn btn-sm btn-outline-primary"
+        (click)="onClickButtonEtaMedia()">Eta Media</button>
     </div>
   </div>
 
